[tool.poetry]
name = "ecb"
version = "0.1.0"
description = ""
authors = ["fzhulitov <fzhulitov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
pandas = "^2.2.0"
requests = "*"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120