[tool.poetry]
name = "ecb"
version = "0.2.0"
description = ""
authors = ["fzhulitov <fzhulitov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
pandas = ">=2.2,<4"
requests = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "^9.0.3"
pytest-mock = "^3.15.1"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120